# flask_scaffold

./: .gitignore  Dockerfile  README.md  boot.sh  config.py  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
app/: __init__.py
app/auth/: forms.py  models.py  views.py
app/auth/templates/: login.jinja2  register.jinja2  unconfirmed.jinja2
app/context/: context_processor.py
app/core/: email.py  views.py
app/core/templates/: index.jinja2
app/errors/: exceptions.py  handlers.py
app/errors/templates/: 404.j2  404.jinja2  500.j2  500.jinja2
app/templates/: base.j2  base.jinja2
tests/: test_user_model.py
