[tool.poetry]
name = "chobe"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
flask-sqlalchemy = "^2.4.3"
flask-wtf = "^0.14.3"
email_validator = "^1.1.1"
flask-bootstrap = "^3.3.7"
flask-mail = "^0.9.1"
flask-moment = "^0.10.0"
flask-migrate = "^2.5.3"
flask-script = "^2.0.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.5.3"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
